Z-index isuues was solved

--- a/index.css
+++ b/index.css
@@ -70,6 +70,10 @@ img {
     transform: translateY(15px);
   }
 }
+
+.aos-init[data-aos][data-aos].aos-animate {
+  transform: unset;
+}
 /*#endregion animations*/
 
 /*#region generalStyles*/
